# project-adaptive-gnn-vqe

./: .gitignore  README.md  pyproject.toml
configs/: xxz_spinchain.yaml
scripts/: check_dataset_integrity.py  check_gradient_ratio.py  check_gradient_sign.py  check_j_g_correlation.py  check_rollout_overlap.py  check_sign_balance.py  compare_adapt_gnn.py  diagnose_j_baseline.py  energy_vs_depth.py  plot_training_summary.py  pool_scaling_online.py  run_ablation_study.py  train_xxz.py  vqe_refined_depth_scaling.py
src/adaptive_gnn_vqe/data/: builders.py  xxz_generator.py
src/adaptive_gnn_vqe/models/: __init__.py  pointer_gnn.py
src/adaptive_gnn_vqe/training/: losses.py  train.py
src/adaptive_gnn_vqe/vqe/: __init__.py  compare.py
tests/: test_imports.py
