[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-gnn-vqe"
version = "0.1.0"
description = "Graph neural network policies for ADAPT-VQE operator selection"
authors = [
  {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "scipy",
  "torch",
  "torch-geometric",
  "networkx",
  "matplotlib",
  "pyyaml",
  "tqdm"
]

[tool.setuptools.packages.find]
where = ["src"]